--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,5 @@ jobs:
       - run: mix local.rebar --force
       - run: mix local.hex --force
       - run: mix deps.get
+      - run: mix ecto.setup
       - run: mix test
