--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ jobs:
   build:
     docker:
       - image: circleci/elixir:1.6
+        environment:
+          - MIX_ENV: test
       - image: circleci/postgres:10.2-alpine
         environment:
           - POSTGRES_USER: postgres
