--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,29 @@ jobs:
       - checkout
       - run: mix local.rebar --force
       - run: mix local.hex --force
-      - run: mix deps.get
-      - run: mix ecto.setup
+      - restore_cache:
+          keys:
+            - v1-deps-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v1-deps-cache-{{ .Branch }}
+            - v1-deps-cache
+      - restore_cache:
+          keys:
+            - v1-build-cache-{{ .Branch }}
+            - v1-build-cache
+      - run: mix do deps.get, compile
+      - save_cache:
+          key: v1-deps-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          paths: "deps"
+      - save_cache:
+          key: v1-deps-cache-{{ .Branch }}
+          paths: "deps"
+      - save_cache:
+          key: v1-deps-cache
+          paths: "deps"
+      - save_cache:
+          key: v1-build-cache-{{ .Branch }}
+          paths: "_build"
+      - save_cache:
+          key: v1-build-cache
+          paths: "_build"
       - run: mix test
